--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Industruino <connect@industruino.com>
 sentence=Library for the Industruino Ethernet module
 paragraph=With this library you can use the Industruino Ethernet module to communicate over Ethernet and to connect to Internet. The library provides both client and server functionalities, allows to connect to a local network (also with DHCP) and to resolve DNS.
 category=Communication
-url=https://github.com/Industruino/Indio
+url=https://github.com/Industruino/EthernetIndustruino
 architectures=avr
 includes=EthernetIndustruino.h,SPI.h
